# win-wrec

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTES.md  README.md  SECURITY.md  test_import.rs  test_mf.rs
.cargo/: config.toml
.github/workflows/: release.yml
crates/app/: Cargo.toml
crates/app/src/: app.rs  assets.rs  config.rs  main.rs  platform.rs
crates/app/src/ui/: control_window.rs  mod.rs
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  run.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/control/: Cargo.toml
crates/control/src/: client.rs  ipc.rs  lib.rs  paths.rs  protocol.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: client.rs  coordinator.rs  jobs.rs  lib.rs  main.rs  paths.rs  protocol.rs  runtime.rs  server.rs  target_resolution.rs  test_support.rs
crates/macos/: Cargo.toml  build.rs
crates/macos/native/: capture_engine.swift  wrec_helper.swift
crates/macos/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/windows/: Cargo.toml
crates/windows/src/: lib.rs
crates/windows/src/platform/: audio.rs  dxgi.rs  encoder.rs
crates/wrec-app/: Cargo.toml
crates/wrec-app/src/: main.rs
crates/wrec-core/src/: lib.rs
crates/wrec-macos/native/: wrec_helper.swift
crates/wrec-macos/src/: lib.rs
crates/xtask/src/: main.rs
marketing/: README.md  astro.config.mjs  package.json  vercel.json
marketing/src/pages/: docs.astro  index.astro
marketing/src/styles/: global.css
packaging/homebrew/Casks/: wrec.rb
packaging/homebrew/Formula/: wrec-cli.rb
packaging/macos/: Info.plist  README.md
scripts/: install-cli.sh  package-cli-macos.sh  package-macos.sh
