[workspace]
members = [
  "crates/backend",
  "crates/cli",
  "crates/config",
  "crates/control",
  "crates/core",
  "crates/daemon",
  "crates/store",
  "crates/windows",
  "crates/xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

