[workspace]
members = [
  "crates/app",
  "crates/backend",
  "crates/cli",
  "crates/config",
  "crates/control",
  "crates/core",
  "crates/daemon",
  "crates/store",
  "crates/windows",
  "crates/xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# macOS/native bindings
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-foundation = "0.3"
objc2-core-media = "0.3"
objc2-core-video = "0.3"
objc2-core-graphics = "0.3"
objc2-av-foundation = "0.3"
objc2-video-toolbox = "0.3"
objc2-screen-capture-kit = "0.3"
objc2-metal = "0.3"
