[package]
name = "app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
autobins = false

[[bin]]
name = "wrec-app"
path = "src/main.rs"

[dependencies]
control = { path = "../control" }
domain = { package = "core", path = "../core" }
config = { path = "../config" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
phosphor-svgs = "0.3.0"
futures = "0.3.32"
