[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
autobins = false

[[bin]]
name = "wrec-app"
path = "src/main.rs"

[dependencies]
control = { path = "../control" }
domain = { package = "core", path = "../core" }
config = { path = "../config" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
egui = "0.31"
eframe = "0.31"
futures = "0.3.32"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
