[package]
name = "wrec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "wrec"
path = "src/main.rs"

[dependencies]
wrec-core = { path = "../core" }
wrec-backend = { path = "../backend" }
wrec-macos = { path = "../macos" }
ctrlc = { version = "3.4", features = ["termination"] }
serde_json = "1.0.150"
