[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "wrec"
path = "src/main.rs"

[dependencies]
control = { path = "../control" }
domain = { package = "core", path = "../core" }
serde_json = "1.0.150"
ctrlc = "3.5.2"
