[package]
name = "daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
control = { path = "../control" }
backend = { path = "../backend" }
domain = { package = "core", path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-recorder = { path = "../windows" }

[[bin]]
name = "daemon"
path = "src/main.rs"
