[package]
name = "macos"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
domain = { package = "core", path = "../core" }
anyhow.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
objc2-core-foundation.workspace = true
objc2-core-media.workspace = true
objc2-core-video.workspace = true
objc2-core-graphics.workspace = true
objc2-av-foundation.workspace = true
objc2-video-toolbox.workspace = true
objc2-screen-capture-kit.workspace = true
objc2-metal.workspace = true
