[package]
name = "windows-recorder"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
domain = { package = "core", path = "../core" }
tracing.workspace = true
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Media_MediaFoundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
domain = { package = "core", path = "../core" }
