[package]
name = "wrec-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
wrec-core = { path = "../wrec-core" }
wrec-macos = { path = "../wrec-macos" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
phosphor-svgs = "0.3.0"
